# openmerc

./: .gitignore  .gitmodules  .travis.yml  @TODO  CMakeLists.txt  LICENSE  MANIFESTO.md  Makefile  README.md  install_manifest.txt  oms.py
src/: commands.cpp  commands.hpp  mercore.cpp  mercore.hpp  oms.py
src/module_wrapper/: module.cpp  module_base.hpp  module_wrapper.cpp  module_wrapper.hpp
